2007-05-08  Brian Matherly  <brian@gramps-project.org>
    * src/plugins/NarrativeWeb.py: Change the default directory so people don't
      generate the report in their database directory.

2007-05-07  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py:
	* src/PageView.py:
	* src/Filters/SideBar/_MediaSidebarFilter.py:
	* src/Filters/SideBar/_SidebarFilter.py:
	* src/Filters/SideBar/_SourceSidebarFilter.py:
	* src/Filters/SideBar/_EventSidebarFilter.py:
	* src/Filters/SideBar/_FamilySidebarFilter.py:
	* src/Filters/SideBar/_PlaceSidebarFilter.py:
	* src/Filters/SideBar/_RepoSidebarFilter.py:
	* src/Filters/SideBar/_NoteSidebarFilter.py:
	* src/Filters/SideBar/_PersonSidebarFilter.py: Pass dbstate to SidebarFilters

2007-05-07  Don Allingham  <don@gramps-project.org>
	* src/ReportBase/_SimpleDoc.py: add support for tabs
	* src/BaseDoc.py: add support for tabs	
	* src/docgen/TextBufDoc.py: add support for tabs

2007-05-07 Benny Malengier <bm@cage.ugent.be>
	* src/GrampsDb/_GrampsBSDDB.py: upgrade of grdb now sets correct notetype, and 
          inherits the public/private setting of the parent object it is created from, 
          instead of defaulting to public.

2007-05-07 Benny Malengier <bm@cage.ugent.be>
	* src/Editors/_EditPlace.py:
	* src/Editors/_EditAddress.py:
	* src/Editors/_EditLdsOrd.py:
	* src/Editors/_EditSourceRef.py:
	* src/Editors/_EditSource.py:
	* src/Editors/_EditRepoRef.py:
	* src/Editors/_EditAttribute.py:
	* src/Editors/_EditPersonRef.py:
	* src/Editors/_EditNote.py:
	* src/Editors/_EditPerson.py:
	* src/Editors/_EditMediaRef.py:
	* src/Editors/_EditEventRef.py:
	* src/Editors/_EditMedia.py:
	* src/Editors/_EditRepository.py:
	* src/Editors/_EditName.py:
	* src/Editors/_EditChildRef.py:
	* src/Editors/_EditFamily.py:
	* src/Editors/_EditEvent.py:
	* src/RelLib/_NoteType.py:
	* src/DisplayTabs/_NoteTab.py:
	* src/GrampsWidgets.py:
	* TODO: